--- a/css/layout.css
+++ b/css/layout.css
@@ -25,7 +25,7 @@
 /* Posititoning Classes */
 
 .col-row-1 {
-  column-count: 2;
+  column-count: 3;
   display: inline;
   margin: auto;
 }
@@ -36,7 +36,15 @@
   margin: auto;
 }
 
+#spotlight {
+  width: 66%;
+}
 
+.feature {
+  width: 30%;
+  display: inline;
+  margin: auto;
+}
 
 .left {
   float: left;
