--- a/css/layout.css
+++ b/css/layout.css
@@ -45,3 +45,19 @@
   display: inline;
   margin: auto;
 }
+
+.left {
+  float: left;
+}
+
+.right {
+  float: right;
+}
+
+.center {
+  float: right;
+  float: left;
+  clear: none;
+  margin: auto;
+  justify-content: center;
+}
