--- a/css/layout.css
+++ b/css/layout.css
@@ -41,12 +41,12 @@
 }
 
 .feature {
-  width: 30%;
+  width: 33%;
 }
 
 .left {
   float: left;
-  margin-left: 1%;
+  margin: 0 1% 0 0;
 }
 
 .right {
